; ModuleID = '/home/carl/AnghaBench/freebsd/tests/sys/kern/extr_unix_passfd_test.c_putfds.c'
source_filename = "/home/carl/AnghaBench/freebsd/tests/sys/kern/extr_unix_passfd_test.c_putfds.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cmsghdr = type { i32, i32, i32 }

@SOL_SOCKET = common dso_local global i32 0, align 4
@SCM_RIGHTS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32, i32)* @putfds to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @putfds(i8* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.cmsghdr*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %10 = load i8*, i8** %4, align 8
  %11 = bitcast i8* %10 to %struct.cmsghdr*
  store %struct.cmsghdr* %11, %struct.cmsghdr** %7, align 8
  %12 = load i32, i32* %6, align 4
  %13 = sext i32 %12 to i64
  %14 = mul i64 %13, 4
  %15 = trunc i64 %14 to i32
  %16 = call i32 @CMSG_LEN(i32 %15)
  %17 = load %struct.cmsghdr*, %struct.cmsghdr** %7, align 8
  %18 = getelementptr inbounds %struct.cmsghdr, %struct.cmsghdr* %17, i32 0, i32 2
  store i32 %16, i32* %18, align 4
  %19 = load i32, i32* @SOL_SOCKET, align 4
  %20 = load %struct.cmsghdr*, %struct.cmsghdr** %7, align 8
  %21 = getelementptr inbounds %struct.cmsghdr, %struct.cmsghdr* %20, i32 0, i32 1
  store i32 %19, i32* %21, align 4
  %22 = load i32, i32* @SCM_RIGHTS, align 4
  %23 = load %struct.cmsghdr*, %struct.cmsghdr** %7, align 8
  %24 = getelementptr inbounds %struct.cmsghdr, %struct.cmsghdr* %23, i32 0, i32 0
  store i32 %22, i32* %24, align 4
  %25 = load %struct.cmsghdr*, %struct.cmsghdr** %7, align 8
  %26 = call i64 @CMSG_DATA(%struct.cmsghdr* %25)
  %27 = inttoptr i64 %26 to i32*
  store i32* %27, i32** %8, align 8
  store i32 0, i32* %9, align 4
  br label %28

28:                                               ; preds = %36, %3
  %29 = load i32, i32* %9, align 4
  %30 = load i32, i32* %6, align 4
  %31 = icmp slt i32 %29, %30
  br i1 %31, label %32, label %39

32:                                               ; preds = %28
  %33 = load i32, i32* %5, align 4
  %34 = load i32*, i32** %8, align 8
  %35 = getelementptr inbounds i32, i32* %34, i32 1
  store i32* %35, i32** %8, align 8
  store i32 %33, i32* %34, align 4
  br label %36

36:                                               ; preds = %32
  %37 = load i32, i32* %9, align 4
  %38 = add nsw i32 %37, 1
  store i32 %38, i32* %9, align 4
  br label %28

39:                                               ; preds = %28
  ret void
}

declare dso_local i32 @CMSG_LEN(i32) #1

declare dso_local i64 @CMSG_DATA(%struct.cmsghdr*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
